# clinosim

./: .gitattributes  .gitignore  .session-resume-prompt.md  .test_durations  .zenodo.json  404.html  BEDROCK_SETUP.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  DES_MIGRATION.md  LICENSE  MODULES.md  Makefile  NARRATIVE_CIF_MAPPING.md  NARRATIVE_GENERATION_FLOW.md  NEXT_STEPS.md  README.ja.md  README.md  SCENARIO_FLAGS.md  SECURITY.md  SESSION_SUMMARY_2026-04-09.md  SESSION_UPDATE_2026-04-09b.md  TODO.md  index.html  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  sitemap.xml  spec.md  test_all_narratives.py  test_bedrock_narrative.py  test_bedrock_timing.py  test_cif_narrative.py  test_narrative_module.py  test_show_narratives.py  (+3 more)
.github/: PULL_REQUEST_TEMPLATE.md  TEMPLATE_MODULE_README.md  jp-validator-pins.env
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  dco.yml  docs.yml  jp-validate.yml  release.yml
CONTRIBUTING-modules/: index.html
add-your-country/: index.html
bedrock_setup/: index.html
benchmarks/: index.html
clinical_documents/: index.html
clinosim/: INTERFACES.md  SPEC_simulator.md  __init__.py  simulator.py  simulator_beta.py
clinosim/audit/: __init__.py  cli.py  engine.py  registry.py  reporter.py  types.py
clinosim/benchmarks/: __init__.py  aki.py  cli.py  harness.py  sepsis.py
clinosim/codes/: README.md  __init__.py  loader.py
clinosim/config/: hospital_large.yaml  hospital_operations.yaml  hospital_small.yaml  japan.yaml  llm_service.bedrock.yaml  llm_service.cloud.yaml  llm_service.yaml  us.yaml
clinosim/dataset/: __init__.py
clinosim/eval/: __init__.py  cli.py  engine.py  report.py  synthea_adapter.py
clinosim/locale/: README.md  loader.py  text.py
clinosim/modules/: _shared.py
clinosim/simulator/: __init__.py  cli.py  des_engine.py  diff.py  emergency.py  engine.py  enrichers.py  enumerate.py  helpers.py  inpatient.py  log.py  memoize.py  outpatient.py  seeding.py
clinosim/types/: __init__.py  allergy.py  antibiotic.py  clinical.py  config.py  device.py  diagnosis.py  document.py  encounter.py  family_history.py  hai.py  identity.py  imaging.py  microbiology.py  narrative.py  output.py  patient.py  population.py  procedure.py  staff.py  triage.py
datasets/: README.md
datasets/jp-100/: README.md  spec.yaml
datasets/jp-1000/: README.md  spec.yaml
datasets/us-100/: README.md  spec.yaml
datasets/us-1000/: README.md  spec.yaml
design-guides/: index.html
design-guides/code-display-authoritative-sync/: index.html
design-guides/data-generation-walkthrough/: index.html
design-guides/data-model-and-completeness-conventions/: index.html
design-guides/fhir-data-generation-logic/: index.html
design-guides/implementation-rules/: index.html
design-guides/project-concept-and-design/: index.html
development/changelog/: index.html
development/reproducibility/: index.html
docs/: CONTRIBUTING-modules.md  add-your-country.md  bedrock_setup.md  benchmarks.md  clinical_documents.md  eval-rules.md  eval.md  fhir-server-ingestion.md  index.md  jp-clins.md  session-48-cold-start.md  session-49-resume-prompt.md  session-52-resume-prompt.md  synthea-comparison.md
docs/audit-cycles/: README.md  by-design-registry.md  cycle-1.md  cycle-2.md  cycle-3.md  cycle-4.md  cycle-5.md  cycle-6.md  cycle-7.md  cycle-8.md  verification-2026-07-11-seed100.md
docs/design-guides/: README.md  code-display-authoritative-sync.md  data-generation-walkthrough.md  data-model-and-completeness-conventions.md  fhir-data-generation-logic.md  implementation-rules.md  project-concept-and-design.md
docs/design-notes/: 2026-06-30-tier1-document-and-event-density-master-plan.md  2026-07-02-grand-design-review-and-roadmap.md  2026-07-03-remote-llm-narrative-workflow.md  2026-07-06-fhir-completeness-and-data-model-unification.md  2026-07-06-fix-point-registry.md
docs/development/: changelog.md  reproducibility.md
docs/getting-started/: installation.md  quick-start.md  versioning.md
docs/governance/: citation.md  (+3 more)
eval/: index.html
eval-rules/: index.html
fhir-server-ingestion/: index.html
jp-clins/: index.html
modules/: INTERFACES.md
scratchpad/: bmp_cl_ca_byte_diff.py  bmp_cl_ca_clinical_audit.py  cbc_bmp_byte_diff.py  cbc_bmp_panel_audit.py  clinosim_audit_byte_diff.py  clinosim_audit_byte_diff_results.md  coag_panel_byte_diff.py  coag_panel_byte_diff_results.md  coag_panel_dqr_jp.md  coag_panel_dqr_us.md  device_byte_diff_results.md  dqr_coag_panel_review.py  dqr_phase2a_vte_review.py  dqr_pr75_review.py  hai_byte_diff_results.md  phase2a_byte_diff.py  phase2a_byte_diff_results.md  phase2a_dqr_jp.md  phase2a_dqr_us.md  phase2b_byte_diff_results.md  phase3a_byte_diff.py  phase3a_byte_diff_post_fix.md  phase3a_byte_diff_results.md  phase3a_dqr.py  phase3a_lift_fired_proof.py  pr3_byte_diff_results.md  refactor_pr1_byte_diff_results.md  refactor_pr2_byte_diff_results.md  task7c_spike_result.txt
scripts/: audit_disease_narrative_en.py  convert_ja_narrative_style.py  diagnose_triage_severity.py  extract_5type_samples.sh  full_run_bedrock.sh  full_run_ja.sh  full_run_us.sh  generate_with_bedrock.sh  patch_cif_procedures.py  pin_jp_validator.sh  prepare_ab_test_prompts.py  refresh_authoritative_loinc.py  refresh_authoritative_yj.py  refresh_authoritative_yj_tx_valid.py  reproduce.sh  run_ab_test_narrative.py  run_ab_test_narrative.sh  test_bedrock_connection.py  validate_5types_bedrock.py  validate_bedrock_single.sh  validate_ja_compact.sh  validate_ja_compact2.sh  validate_ja_narratives.sh  validate_jp.sh
search/: search_index.json
session-48-cold-start/: index.html
session-49-resume-prompt/: index.html
session-52-resume-prompt/: index.html
session-resume/: index.html
synthea-comparison/: index.html
test_data/: bedrock_5type_validation.txt  bedrock_ja_compact2_results.txt  bedrock_ja_compact_results.txt  bedrock_ja_full_results.txt  bedrock_ja_results.txt  bedrock_results.txt  bedrock_us_full_results.txt
(+6400 files in other folders)
