[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clinosim"
dynamic = ["version"]
description = "Clinically Realistic Hospital Data Simulator — physiology-driven synthetic EHR / FHIR R4 generator"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "clinosim contributors" },
]
keywords = [
    "fhir",
    "ehr",
    "emr",
    "synthetic-data",
    "healthcare",
    "simulation",
    "clinical-data",
    "hl7",
    "jp-core",
    "medical-ai",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/TomoOkuyama/clinosim"
Documentation = "https://github.com/TomoOkuyama/clinosim#readme"
Source = "https://github.com/TomoOkuyama/clinosim"
Issues = "https://github.com/TomoOkuyama/clinosim/issues"
Changelog = "https://github.com/TomoOkuyama/clinosim/blob/master/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.3",
    "mypy>=1.8",
]
llm = [
    "httpx>=0.27",
]
parquet = [
    "pyarrow>=15.0",
    "pandas>=2.2",
]
all = ["clinosim[dev,llm,parquet]"]

[project.scripts]
clinosim = "clinosim.simulator.cli:main"

[tool.hatch.version]
# Single source of truth: version lives in clinosim/__init__.py::__version__.
# Bump there and it flows to `clinosim.__version__`, `pip show clinosim`, and
# PyPI listing simultaneously (P0 #1 packaging, session 46).
path = "clinosim/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["clinosim"]

[tool.hatch.build.targets.sdist]
# Explicit sdist manifest so YAML reference data / config / codes / locale
# data ship inside the source tarball (wheel target infers them automatically,
# sdist does not without this hint). Tests are included for reproducibility
# from an sdist checkout.
include = [
    "clinosim/**/*.py",
    "clinosim/**/*.yaml",
    "clinosim/**/*.yml",
    "clinosim/**/*.json",
    "tests/**/*.py",
    "tests/**/*.yaml",
    "README.md",
    "README.ja.md",
    "CHANGELOG.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Unit tests (per module, fast)",
    "integration: Integration tests (module chains)",
    "e2e: End-to-end tests (full simulation, slow)",
    "regression: Narrative regression suite (AD-66 α-min-2c, opt-in)",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
