[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clinosim"
dynamic = ["version"]
description = "Clinically Realistic Hospital Data Simulator — physiology-driven synthetic EHR / FHIR R4 generator"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "clinosim contributors" },
]
keywords = [
    "fhir",
    "ehr",
    "emr",
    "synthetic-data",
    "healthcare",
    "simulation",
    "clinical-data",
    "hl7",
    "jp-core",
    "medical-ai",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/TomoOkuyama/clinosim"
Documentation = "https://github.com/TomoOkuyama/clinosim#readme"
Source = "https://github.com/TomoOkuyama/clinosim"
Issues = "https://github.com/TomoOkuyama/clinosim/issues"
Changelog = "https://github.com/TomoOkuyama/clinosim/blob/master/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",  # parallel test execution (Issue #TODO CI integration speedup)
    "ruff>=0.3",
    "mypy>=1.8",
    "types-PyYAML>=6.0",  # mypy stubs for pyyaml (P0-2, session 46)
    "build>=1.0",         # sdist/wheel build (P0-2, used by CI packaging job)
]
llm = [
    "httpx>=0.27",
]
parquet = [
    "pyarrow>=15.0",
    "pandas>=2.2",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocs-include-markdown-plugin>=6",
    "pymdown-extensions>=10",
]
all = ["clinosim[dev,llm,parquet,docs]"]

[project.scripts]
clinosim = "clinosim.simulator.cli:main"

[tool.hatch.version]
# Single source of truth: version lives in clinosim/__init__.py::__version__.
# Bump there and it flows to `clinosim.__version__`, `pip show clinosim`, and
# PyPI listing simultaneously (P0 #1 packaging, session 46).
path = "clinosim/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["clinosim"]

[tool.hatch.build.targets.sdist]
# Explicit sdist manifest so YAML reference data / config / codes / locale
# data ship inside the source tarball (wheel target infers them automatically,
# sdist does not without this hint). Tests are included for reproducibility
# from an sdist checkout.
include = [
    "clinosim/**/*.py",
    "clinosim/**/*.yaml",
    "clinosim/**/*.yml",
    "clinosim/**/*.json",
    "tests/**/*.py",
    "tests/**/*.yaml",
    "README.md",
    "README.ja.md",
    "CHANGELOG.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Unit tests (per module, fast)",
    "integration: Integration tests (module chains)",
    "e2e: End-to-end tests (full simulation, slow)",
    "regression: Narrative regression suite (AD-66 α-min-2c, opt-in)",
    "serial: Test cannot run in parallel with other tests (mutates shared filesystem or global state); pytest-xdist skips these in the parallel batch and runs them single-worker in a follow-up pass.",
]

[tool.ruff]
target-version = "py311"
# Session 52 lint sweep: bumped from 100 → 120. The remaining 312 pre-existing
# E501 hits after auto-fix + noqa sweep concentrate on (a) spec-anchored URIs
# (JP Core / JP-CLINS / SNOMED / LOINC URLs are load-bearing literals that
# should not be split), (b) long f-strings in audit / DQR reporters, and
# (c) test docstrings describing multi-file invariants. Manual reflow would
# hurt readability more than the extra 20 columns hurt terminal layout, so
# align the rule with the existing shape of the codebase. CLAUDE.md updated
# in the same commit.
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

# Session 52 lint sweep: `per-file-ignores` protects intentional naming choices
# so noise doesn't drown out real lint findings. Every entry corresponds to a
# spec-anchored or convention-anchored decision noted below.
[tool.ruff.lint.per-file-ignores]
# JP Core / JP-CLINS / JP-eCheckup identifiers use CamelCase per the spec
# (`eCheckup`, `UNKNOWN`, `refRange`, `T` — literal fragments from FHIR /
# HAPI validator error text) — matching those tokens in identifiers keeps
# tests and JP builders grep-linkable to the spec.
"clinosim/modules/output/_fhir_composition.py" = ["N802"]
"tests/unit/test_jp_eCheckup_*.py" = ["N802", "N999"]
"tests/unit/output/test_fhir_care_team.py" = ["N802"]
"tests/unit/test_axis_structural.py" = ["N802"]
"tests/unit/test_fhir_datetime_helpers.py" = ["N802"]

# Module-level lazy import (top of file has a circular-import guard) —
# intentional pattern, documented at each site with the reason inline.
"clinosim/modules/nursing/engine.py" = ["E402"]
"clinosim/modules/output/_fhir_service_request.py" = ["E402"]
"tests/unit/test_hai_yaml_validators.py" = ["E402"]
"tests/unit/test_population_demographics.py" = ["E402"]

# Function-local UPPER_CASE constants declared inside builders (SCREAMING_SNAKE
# marks lookup-table intent even when scoped to a single function). N806 lint
# would force lower_snake_case which reads as ordinary state — misleading.
"clinosim/modules/output/_fhir_patient.py" = ["N806"]
"clinosim/modules/output/_fhir_practitioner.py" = ["N806"]
"clinosim/modules/physiology/engine.py" = ["N806"]
"clinosim/simulator/helpers.py" = ["N806"]
"clinosim/simulator/inpatient.py" = ["N806"]
"tests/integration/test_document_jp_localization.py" = ["N806"]
"tests/integration/test_narrow_enricher.py" = ["N806"]
"tests/integration/test_hai_lab_lift.py" = ["N811"]
"tests/integration/test_antibiotic_audit.py" = ["N812", "E741"]

# CLI short-name argument `l` mirrors argparse convention (LOS list argument).
"clinosim/simulator/cli.py" = ["E741"]

[tool.mypy]
python_version = "3.11"
strict = true
# Session 52: prepend the local shim so `typing-stubs/numpy/*.pyi` loads
# before site-packages numpy stubs (which use PEP 695 syntax incompatible
# with python_version = 3.11 — see numpy override below).
mypy_path = "typing-stubs"

# Session 52 Type check chain: `strict = true` surfaces 293 + 50 + 43 + 18 =
# 404 annotation-only complaints that were previously hidden by the numpy-
# stub parse failure ("checking prevented"). Disabling them exposes just the
# real-bug rules (arg-type / attr-defined / union-attr / assignment / index /
# return-value / no-redef / var-annotated) that a session-53+ strict-typing
# chain can gradually re-enable module-by-module.
disable_error_code = ["type-arg", "no-untyped-def", "no-any-return", "no-untyped-call"]

[[tool.mypy.overrides]]
# boto3 is optional (installed only for the Bedrock LLM provider); skipping
# its stubs keeps CI Type check green without forcing every dev to install it.
# Session 52 fix.
module = ["boto3.*", "botocore.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# numpy 2.5+ stubs use PEP 695 `type X = Y` syntax that only parses under
# python_version = "3.12". Since we target 3.11 (minimum supported), the numpy
# stub itself fails to load ("Type statement is only supported in Python 3.12
# and greater"), which halts further checking. Skipping stub follow-through
# keeps mypy running on our source without weakening type coverage on our
# own code. Session 52 fix for the常時 CI Type check informational failure.
module = ["numpy", "numpy.*"]
follow_imports = "skip"
